Changes for Perl extension Template-Tiny

{{$NEXT}}

1.15      2025-06-14 15:33:27Z
          - Allow configurable start/end tags (CROMEDOME). This achieves full
            feature parity with Dancer2::Template::ForkedImplementation::Tiny.

1.14      2021-05-02 16:48:45Z
          - add link to Template::Tiny::Strict

1.13      2021-01-30 17:28:27Z
          - distribution tooling updates

1.12      2011-06-17
          - Template::Tiny is unchanged for a year, moving to stable release
          - Cleaning up POD grammar a bit (ADAMK)
          - Removing test dependency on Capture::Tiny for tiny purity (ADAMK)

0.11      2010-02-22
          - Adding preparse-specific test script (ADAMK)
          - Add compatibility with the horrible TT process() signature (MSTROUT)

0.10      2010-01-24
          - The use of the constructor is now compulsory, as per Template.pm
          - Adding support for constructor params
          - Adding support for constructor TRIM param
          - The process method now works in both static and instance modes

0.09      2009-12-16
          - Adding support for "private" _foo keys

0.08      2009-12-13
          - Removing some minor code no longer needed.
          - Updating the POD documentation

0.07      2009-12-13
          - Recursion is now processed top to bottom
          - Added support for FOREACH

0.06      2009-12-13
          - Added support for nested [% IF %] and [% UNLESS %] conditions

0.05      2009-12-10
          - Expression chains in a condition that terminate in an object
            will boolify the object instead of stringifying it + tests for it

0.04      2009-12-10
          - Reduced implementation by 8kb
          - As a side effect of this, added support for UNLESS/ELSE
          - Matching behaviour of TT to NOT chomp on -%](space)(EOF)
          - Switch to Tiny-style Makefile.PL

0.03      2009-12-10
          - Bug fix for methods in expressions
          - Added test case for method calls
